# sonic-mgmt-common

./: .gitignore  LICENSE  Makefile  Makefile.am  NEWS  README.md  azure-pipelines.yml  config.h.in  configure.ac  dell-platform-howto  dell-platform_1.0-0.deb  go.mod  go.sum  makefile.test  package.cfg  run_test.sh
.github/: copilot-instructions.md
config/transformer/: models_list
cvl/: Makefile  README.md  cvl.go  cvl_api.go  cvl_cache.go  cvl_cust_validation_test.go  cvl_error_test.go  cvl_hint.go  cvl_hint_test.go  cvl_leaflist_test.go  cvl_leafref_test.go  cvl_luascript.go  cvl_must_test.go  cvl_optimisation_test.go  cvl_semantics.go  cvl_syntax.go  cvl_test.go  cvl_when_test.go  jsondata_test.go
cvl/common/: cvl_types.go  db_access.go  db_utils.go
cvl/custom_validation/: common.go  test_validations.go
cvl/schema/: Makefile
cvl/tests/: Makefile  cfg_validator.go  cv_acl.go  cv_edit_op.go  cv_vlan.go  run_test.sh
cvl/tools/: generate_yin.py
debian/: .gitignore  changelog  control  files  rules  sonic-mgmt-common-codegen.install  sonic-mgmt-common-codegen.postinst  sonic-mgmt-common.install
examples/: README  sdi_entity.c  sdi_entity_framework.c  sdi_entity_info.c  sdi_entity_reset.c  sdi_fan.c  sdi_led.c  sdi_media.c  sdi_startup.c  sdi_thermal.c
inc/: sdi_entity.h  sdi_entity_info.h  sdi_fan.h  sdi_led.h
models/yang/: .gitignore  Makefile  README.md  gnsi-authz.yang  gnsi-certz.yang  gnsi-credentialz.yang  lint_ignore.ietf  lint_ignore.ocstyle  openconfig-if-ethernet.yang  openconfig-if-ip.yang  openconfig-sampling-sflow.yang  openconfig-system.yang  version.xml
patches/: apply.sh  xpath.patch
patches/goyang/: goyang.patch
patches/ygot/: ygot.patch
sonic/: sdi_entity_info.h  sdi_media.h  sdi_thermal.h
tools/pyang/: lint  (+4 more)
translib/: Makefile  acl_app.go  acl_app_test.go  api_tests_app.go  app_interface.go  app_utils.go  app_utils_test.go  authorize.go  cfg_mgmt.go  common_app.go  intf_app.go  intf_app_test.go  lldp_app.go  nonyang_app.go.demo  path_utils.go  path_utils_test.go  pfm_app.go  pfm_app_test.go  request_binder.go  request_binder_test.go  subscribe.go  subscribe_app_interface.go  subscribe_app_utils.go  subscribe_notify.go  subscribe_test.go  subscribe_utils.go  sys_app.go  translib.go  version.go  version_test.go  yanglib_app.go  yanglib_app_test.go
(+285 files in other folders)
